--- a/config.toml
+++ b/config.toml
@@ -45,7 +45,7 @@
       logo = ""
       # title name
       # 标题名称
-      name = "My cool site"
+      name = "Aya 的博客"
       # you can add extra information before the name (HTML format is supported), such as icons
       # 你可以在名称 (允许 HTML 格式) 之前添加其他信息, 例如图标
       pre = ""
@@ -133,7 +133,7 @@
   # Search config
   # 搜索配置
   [params.search]
-    enable = false
+    enable = true
     # type of search engine ["lunr", "algolia"]
     # 搜索引擎的类型 ["lunr", "algolia"]
     type = "lunr"
@@ -181,7 +181,7 @@
       title = ""
       # subtitle shown in home page (HTML format is supported)
       # 主页显示的网站副标题 (允许 HTML 格式)
-      subtitle = "This is my cool site"
+      subtitle = "Young man, in mathematics you don't understand things. You just get used to them."
       # whether to use typeit animation for subtitle
       # 是否为副标题显示打字机动画
       typeit = true
@@ -201,7 +201,7 @@
   # Social config in home page
   # 主页的社交信息设置
   [params.social]
-    GitHub = ""
+    GitHub = "ayanamists"
     Linkedin = ""
     Twitter = ""
     Instagram = ""
@@ -245,7 +245,7 @@
     Skype = ""
     Whatsapp = ""
     Zhihu = ""
-    Douban = ""
+    Douban = "191397140"
     Angellist = ""
     Slidershare = ""
     Jsfiddle = ""
@@ -273,7 +273,7 @@
     Plume = ""
     HackTheBox = ""
     RootMe= ""
-    Email = ""
+    Email = "me@ayayaya.cc"
     Phone = ""
     RSS = ""
 
