--- a/config.toml
+++ b/config.toml
@@ -273,7 +273,7 @@
     Plume = ""
     HackTheBox = ""
     RootMe= ""
-    Email = "me@ayayaya.cc"
+    Email = "me@ayayaya.org"
     Phone = ""
     RSS = ""
 
